--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
+    "react-rotating-text": "^1.4.1",
+    "react-transition-group": "^4.4.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
