--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "react-rotating-text": "^1.4.1",
+    "react-spring": "^9.7.1",
     "react-transition-group": "^4.4.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
